2009-02-04  Esteban Sanchez  <estebans@artica.es>

	* general/main_menu.php: The menu has been rewritten to be more
	usable, bright and colorful. It's similar to Wordpress administration
	menu. It requires a bit of javascript, but can still works without it.
	Besides, Pandora can remember the menus positions using cookies.

	* include/javascript/jquery.pandora.js: Added javascript code for
	menu handling. Added cookie plugin.
	
	* include/styles/menu.css: Rewritten to be adapted to new menu system.

	* include/styles/images/toggle.gif: Added to repository.

	* include/styles/pandora.css: Set align-top to agent list table under
	Manage agents.

2009-02-04  Esteban Sanchez  <estebans@artica.es>

	* general/login_page.php: Removed width of login error.

	* godmode/agentes/agent_manager.php,
	godmode/agentes/configurar_agente.php: Fixed various errors when
	creating an agent.

	* godmode/agentes/alert_manager.php: Typo error on em closing element.
	Use invisible class instead of style attribute.

	* godmode/agentes/modificar_agente.php: Style correction. Improved a
	bit the interface so the user can go directly to any tab. Fixed agent
	creation parameter.

	* pandoradb.sql: Make disabled field on tagente_modulo not null. It
	could cause some server side errors.

2009-02-02  Esteban Sanchez  <estebans@artica.es>
	
	* godmode/agentes/configurar_agente.php,
	godmode/agentes/module_manager.php,
	godmode/agentes/module_manager_editor.php,
	godmode/agentes/module_manager_editor_data.php,
	godmode/agentes/module_manager_editor_network.php,
	godmode/agentes/module_manager_editor_plugin.php,
	godmode/agentes/module_manager_editor_prediction.php,
	godmode/agentes/module_manager_editor_wmi.php: Agent module editions
	rewritten. The interface should be clearer now and SNMP walking much
	more faster, since it's done with AJAX. Some cleanup might be needed
	yet.

	* godmode/agentes/module_manager_editor_common.php: Added to
	repository. Common part for agent module editors.
